rust_test_framework/tests/compile_tests/should_fail/setup_missing.stderr
error[E0432]: unresolved import `setup`
 --> tests/compile_tests/should_fail/setup_missing.rs:3:1
  |
3 | #[test_fixture]
  | ^^^^^^^^^^^^^^^ no external crate `setup`
  |
  = note: this error originates in the attribute macro `test_fixture` (in Nightly builds, run with -Z macro-backtrace for more info)
